--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,3 +50,8 @@ jobs:
           shell: powershell.exe
           command: |
                 . 'C:\scripts\UiPathDeploy.ps1' "C:\\workingdir\\output\\" "http://cloud.uipath.com" "pocDefault" -account_name pocsg -userKey m8xqWh6rNTsCDeRaDG5KRC490IBmMrGlEwp8ANPIWtskF -folder_organization_unit demo
+      - run:
+          name: "UiPath Run Test"
+          shell: powershell.exe
+          command: |
+            . 'C:\scripts\UiPathRunTest.ps1' "http://cloud.uipath.com" pocDefault -userKey m8xqWh6rNTsCDeRaDG5KRC490IBmMrGlEwp8ANPIWtskF -account_name pocsg -testset "ci_demo" -result_path "C:\workingdir\log\test_results1.json" -folder_organization_unit demo                
