--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,11 @@ jobs:
           command: |
                   New-Item -ItemType Directory -Force -Path "$env:LOCALAPPDATA\UiPath\Rules";
                   Copy-Item "C:\workingdir\Data\RuleConfig.json" "$env:LOCALAPPDATA\UiPath\Rules\RuleConfig.json" -Force;
-                  . 'C:\uipathcli\lib\net461\uipcli.exe' package analyze "C:\workingdir\project.json" --analyzerTraceLevel "Error" --resultPath "C:\workingdir\Log\analyzer.json" --ignoredRules "ST-USG-010,ST-ANA-009,ST-MRD-002,ST-NMG-001,ST-NMG-009,ST-USG-020,ST-MRD-011,ST-NMG-004,ST-ANA-003,ST-NMG-002"
+                  . 'C:\uipathcli\lib\net461\uipcli.exe' package analyze "C:\workingdir\project.json" --analyzerTraceLevel "Error" --resultPath "C:\workingdir\Log\analyzer.json" --ignoredRules "ST-USG-010,ST-ANA-006,ST-MRD-002,ST-NMG-001,ST-NMG-009,ST-USG-020,ST-MRD-011,ST-NMG-004,ST-ANA-003,ST-NMG-002"
                   Get-Content "C:\workingdir\Log\analyzer.json";
                   # Stop building if contains error
                   $SEL = Select-String -Path C:\workingdir\Log\analyzer.json -Pattern "Error"
-                  if ($SEL -eq $null)
+                  if ($SEL -ne $null)
                   {
                       echo Error Detected in Workflow, Exit
                       exit 1
