--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
                   $SEL = Select-String -Path C:\workingdir\Log\analyzer.json -Pattern "Error"
                   if ($SEL -ne $null)
                   {
-                      echo "Error Detected in Workflow, Exit"
+                      echo "Error Detected in Workflow, Exit!"
                       #exit 1
                   }
       - run:
